2000-09-11  Adam Fedor  <fedor@gnu.org>

	* Mingw fixes.
	* Makefile.postamble (header-links): if MINGW, copy header files
	to Foundation (Mingw's gcc can't handle links).

	* Source/mframe/configure.in: Check target, not host.

	* Source/NSDate.m (GSTimeNow): Fix typo.

	* Source/NSData.m (readContentsOfFile): Fix up vars for MINGW.
	(-writeToFile:atomically:): Likewise.	

2000-09-11  Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/gnustep/base/GSXML.h: new classes for parsing XML
	* Source/GSXML.m: new classes for parsing XML
	* Source/Makefile.preamble: Define HAVE_LIBXML if appropriate.
	* Source/GNUMakefile: Build new classes if appropriate.
	* Tools/Makefile.preamble: Removed libxml stuff - now done globally.

2000-09-10  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSCalendarDate: ([-initWithString:calendarFormat:locale:])
	modify parsing to be more tolerant of numeric fields that are smaller
	than the expected size, but warn about unexpected format.

2000-09-08  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSAttributedString.m: Make -description produce output in
	same format as MacOS-X
	* Source/NSDistributedNotificationCenter.m: update method return
	types for macOS-X complience.
	* Headers/gnustep/base/NSDistributedNotificationCenter.h: ditto.

2000-09-08  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSGString.m: Removed obsolete methods and added range checks.
	* Source/NSGCString.m: ditto.
	* Source/NSAttributedString.m: Fix fencepost error in -description.

2000-09-08  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSRunLoop.m: ([-_checkPerformers:]) When a loop executes the
	method to deal with a ([-performSelector:target:argument:order:modes]),
	we cancel the request rather than leaving it to be actioned again next
	time round the loop.

2000-09-07  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSGeometry.m: Add code to parse MacOS-X format strings.
	Also produce MacOS-X format strings if the GSMacOSXCompatibleGeometry